# binance-analyst

./: .flake8  .gitignore  Dockerfile  Makefile  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  startup.py  test.py  update_test_cache.py
analyst/: __init__.py  analysis.py  constants.py  logging.py  screener.py  settings.py  utils.py
analyst/adapters/: __init__.py  binance.py  factory.py  local_file.py  mongo.py  rabbitmq.py  redis.py  types.py
analyst/bot/: bot.py  exceptions.py  http_client.py  http_server.py  order_manager.py  prompt.py
analyst/bot/strategies/: base.py  factory.py  registry.py
analyst/controllers/: binance.py  factory.py  helpers.py  mongo.py
analyst/crypto/: exceptions.py  models.py
analyst/repositories/: factory.py  order.py  strategy.py  utils.py
binance_analyst/: analysis.py  exceptions.py  objects.py  types.py  utils.py
binance_analyst/adapters/: __init__.py  binance.py  dataframe.py  file.py
binance_analyst/controllers/: __init__.py  account.py  base.py  exchange.py  pair.py
binance_analyst/core/: settings.py
binance_analyst/helpers/: account.py
binance_analyst/repositories/: __init__.py  account.py  base.py  exchange.py  pair.py
notebooks/: CheckOpportunities.ipynb  FiatDepositsAndWithdrawals.ipynb  OrderManager.ipynb  Screener.ipynb
scripts/: update_test_cache.py
tests/: conftest.py  test_adapters.py  test_repositoies.py  test_settings.py  utils.py
tests/adapters/: test_local_file.py  test_redis.py
tests/bot/: bot.py  http_client.py  http_server.py  order_manager.py
tests/bot/strategies/: base.py  market_maker_v3.py  registry.py  storage.py
tests/controllers/: binance.py  mocks.py  mongo.py  test_account.py  test_exchange.py  test_pair.py
tests/fixture_data/: account_info.json  exchange_info.json  pairs_prices.json  symbols.json
tests/fixtures/: __init__.py  orders.py  pairs.py
tests/fixtures/dataframes/: ADABNB_1d_2017-01-01_00:00:00_2022-01-01_00:00:00.json  (+70 more)
tests/helpers/: test_account.py
tests/integration/: binance.py  bot.py  order_manager.py  screener.py
tests/mocks/: common.py  order_manager.py  strategies.py
tests/repositories/: order.py  strategy.py  test_account.py  test_exchange.py  test_pair.py
(+9 files in other folders)
